--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
                   
                   <br>
       
-                  <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>Languages</b></p>
+                  <p class="w3-large w3-text-theme"><b><i class="fa fa-globe fa-fw w3-margin-right w3-text-teal"></i>语言</b></p>
                   <p>英语六级：502分</p>
                   <div class="w3-light-grey w3-round-xlarge">
                     <div class="w3-round-xlarge w3-teal" style="height:24px;width:100%"></div>
